<?xml version="1.0"?>
<package format="2">
  <name>go1_republisher</name>
  <version>0.1.0</version>
  <description>Unitree Go1 Republisher node</description>

  <maintainer email="hi@aatb.ch">AATB GmbH / Thibault Brevet</maintainer>
  <maintainer email="anthony.goeckner@northwestern.edu">Anthony Goeckner</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/aatb-ch/go1-republisher</url>
  <author email="hi@aatb.ch">AATB GmbH / Thibault Brevet</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>tf</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>camera_info_manager_py</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  

  <exec_depend>tf2</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>camera_info_manager_py</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

